--- a/notebook/Temp_log.ipynb
+++ b/notebook/Temp_log.ipynb
@@ -2,27 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Connecting to arduino on /dev/ttyACM3... done.\n",
-      "('my_name_is', ['Temp logger'], 1610683977.3979352)\n"
+      "('my_name_is', ['Temp logger'], 1610686378.607427)\n"
      ]
     }
    ],
    "source": [
-    "#from tqdm import tqdm\n",
     "from time import sleep\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
     "#import matplotlib.pyplot as plt\n",
     "from IPython.display import display, clear_output\n",
-    "\n",
     "\n",
     "stream = os.popen(' ls -l /dev/serial/by-id | grep Arduino_LLC_Arduino_Leonardo')\n",
     "output = stream.read()\n",
@@ -52,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "('my_name_is', ['Temp logger'], 1610683980.7630892)\n"
+      "('my_name_is', ['Temp logger'], 1610686391.2553415)\n"
      ]
     }
    ],
@@ -71,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "('temp_is', ['Probe Temp (C):', 27.828125], 1610683983.4388933)\n"
+      "('temp_is', ['Probe Temp (C):', 22.15625], 1610686401.1685512)\n"
      ]
     }
    ],
@@ -113,6 +111,33 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -131,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
